--- a/css/style.css
+++ b/css/style.css
@@ -436,62 +436,102 @@ header.sticky{
 	background: url(../img/coursebg.png);
 	background-size: cover;
 	background-position: center;
+	overflow: hidden;
 }
 
-.testimonials-content{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(400px, auto));
-	gap: 2rem;
-	align-items: center;
+.testimonials-marquee{
+	width: 100%;
+	overflow: hidden;
 	margin-top: 4rem;
-	cursor: pointer;
-	border-radius: 15px;
+	position: relative;
 }
 
-.testimonial-box{
+.marquee-content{
+	display: flex;
+	animation: marquee 30s linear infinite;
+	width: max-content;
+}
+
+.testimonial-item{
+	display: flex;
+	align-items: center;
 	background: var(--bg-color);
-	padding: 0px 0px 10px 0px;
-	border-radius: 20px;
-	box-shadow: 0px 5px 40px rgb(19 8 73 / 13%);
+	padding: 20px;
+	margin-right: 30px;
+	border-radius: 15px;
+	box-shadow: 0px 5px 20px rgb(19 8 73 / 13%);
+	min-width: 400px;
+	max-width: 500px;
 	transition: all .40s ease;
 }
 
-.testimonial-box:hover{
-	transform: translateY(-15px);
+.testimonial-item:hover{
+	transform: translateY(-5px);
+	box-shadow: 0px 10px 30px rgb(19 8 73 / 20%);
 }
 
-.testimonial-img img{
+.testimonial-avatar{
+	width: 60px;
+	height: 60px;
+	margin-right: 20px;
+	flex-shrink: 0;
+}
+
+.testimonial-avatar img{
 	width: 100%;
-	height: 200px;
+	height: 100%;
 	object-fit: cover;
-	border-radius: 15px 15px 0px 0px;
+	border-radius: 50%;
+	border: 3px solid var(--main-color);
 }
 
-.testimonial-text{
-	padding: 35px 20px;
+.testimonial-info{
+	flex: 1;
 }
 
-.testimonial-text h4{
-	font-size: 20px;
+.testimonial-info h4{
+	font-size: 18px;
 	font-weight: 700;
 	margin-bottom: 5px;
 	color: var(--main-color);
 }
 
-.testimonial-text h6{
+.testimonial-info h6{
 	color: var(--second-color);
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 500;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 }
 
-.testimonial-text p{
+.testimonial-info p{
 	color: #696969;
-	font-size: var(--p-font);
+	font-size: 14px;
 	font-weight: 400;
-	line-height: 25px;
-	letter-spacing: 1px;
-	margin-bottom: 20px;
+	line-height: 20px;
+	margin-bottom: 10px;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
+.testimonial-info .rating{
+	display: flex;
+	gap: 2px;
+}
+
+.testimonial-info .rating i{
+	color: #ffd700;
+	font-size: 14px;
+}
+
+@keyframes marquee{
+	0% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(-50%);
+	}
 }
 
 .register{
@@ -902,5 +942,35 @@ header.sticky{
 @media (max-width: 600px){
 	.home{
 		height: 120vh;
+	}
+	
+	.testimonial-item{
+		min-width: 300px;
+		max-width: 350px;
+		padding: 15px;
+		margin-right: 20px;
+	}
+	
+	.testimonial-avatar{
+		width: 50px;
+		height: 50px;
+		margin-right: 15px;
+	}
+	
+	.testimonial-info h4{
+		font-size: 16px;
+	}
+	
+	.testimonial-info h6{
+		font-size: 11px;
+	}
+	
+	.testimonial-info p{
+		font-size: 12px;
+		line-height: 18px;
+	}
+	
+	.marquee-content{
+		animation: marquee 20s linear infinite;
 	}
 }
